--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-<title>KooHee® Official Site</title>
+<title>AX18® Official Site</title>
 <meta name="Description" content="Guaranteed lowest price on digital products from every top brand.Such as iphone 7 & UAV & HUAWEI MI
 SPECIAL OFFICIAL: Get iPhone 7 At 0$ !! Promotion Expires 5 Minutes!">
 <meta name="Keywords" content="goestime,iphone deals,UAV,HUAWEI,XIAOMI">
