--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <head>
-<title>AX18® Official Site</title>
+<title>GaGa Deals - The Biggest Deals on the World!!!</title>
 <meta name="Description" content="Guaranteed lowest price on digital products from every top brand.Such as iphone 7 & UAV & HUAWEI MI
 SPECIAL OFFICIAL: Get iPhone 7 At 0$ !! Promotion Expires 5 Minutes!">
 <meta name="Keywords" content="goestime,iphone deals,UAV,HUAWEI,XIAOMI">
 </head>
 <body>
 <center>
-<table width="300" border="0" cellspacing="40"><!--模板-->
-  <tr>
-    <td>
-        <a href="https://goo.gl/RzLnGn"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/565/480/3716084565_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/xYUJRD"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/266/326/3718623662_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/Hg7ssa"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/547/026/3718620745_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>      
-  </tr>
-  <tr>
-    <td>
+<!--模块一 声明 开始-->
+<p align="left">
+<p>
+	<span style="color:#E53333;font-size:32px;line-height:1.5;">Statement of Bankruptcy Protection</span> 
+</p>
+<p>
+<span style="color:#333333;font-size:24px;">My dear friends,</br>
+Thank you for your support to our online shop,</br>
+But, We went bankrupt since October 6, 2017. </br>
+Because of We suffered an unbearable LOSS. </br>
+Our online shop was Stop Operation.</br>
+We stopped dealing with parcels,</br></br>
+We do not handle refunds/returns any more.</br></br></br>
+If you need any help,pleae contact with us before October 31, 2017.</span>
+</p>
+<p>
+	<span style="color:#333333;font-size:24px;"><span style="color:#E53333;font-size:32px;">We went bankrupt!</span><br />
+</span>
+</p>
+</p>
+<!--模块一 声明 结束-->
+</br>
+<!--模块二 产品推荐 开始-->
+<table width="300" border="0" cellspacing="40">
+<!--第一行 千人千面推荐3个-->
+<td>
 <script style="text/javascript">
   document.write('<a style="display:none!important" id="580160"></a>');
   if (window.AED_SHOW) {
@@ -33,13 +45,13 @@ SPECIAL OFFICIAL: Get iPhone 7 At 0$ !! Promotion Expires 5 Minutes!">
       s.id = 'ae-ad-script-$';
       s.charset = "utf-8";
       s.async = !0;
-      s.src = "http://i.alicdn.com/ae-game/thirdparty/show-window/index.js";
+      s.src = "https://i.alicdn.com/ae-game/thirdparty/show-window/index.js";
       h.insertBefore(s, h.firstChild)
     }
   }
 </script>
-    </td>  
-    <td>
+</td>
+<td>
         <script style="text/javascript">
   document.write('<a style="display:none!important" id="580160"></a>');
   if (window.AED_SHOW) {
@@ -53,13 +65,13 @@ SPECIAL OFFICIAL: Get iPhone 7 At 0$ !! Promotion Expires 5 Minutes!">
       s.id = 'ae-ad-script-$';
       s.charset = "utf-8";
       s.async = !0;
-      s.src = "http://i.alicdn.com/ae-game/thirdparty/show-window/index.js";
+      s.src = "https://i.alicdn.com/ae-game/thirdparty/show-window/index.js";
       h.insertBefore(s, h.firstChild)
     }
   }
 </script>
-    </td>  
-    <td>
+</td>  
+<td>
         <script style="text/javascript">
   document.write('<a style="display:none!important" id="580160"></a>');
   if (window.AED_SHOW) {
@@ -73,239 +85,51 @@ SPECIAL OFFICIAL: Get iPhone 7 At 0$ !! Promotion Expires 5 Minutes!">
       s.id = 'ae-ad-script-$';
       s.charset = "utf-8";
       s.async = !0;
-      s.src = "http://i.alicdn.com/ae-game/thirdparty/show-window/index.js";
+      s.src = "https://i.alicdn.com/ae-game/thirdparty/show-window/index.js";
       h.insertBefore(s, h.firstChild)
     }
   }
 </script>
+</td>      
+
+<!--End 第一行 千人千面推荐3个-->
+</tr>  
+<!--  第二行图片超链接-2017-1111--> 
+
+    <td>
+        <a href="https://s.click.aliexpress.com/e/BMn2BUv?bz=120*600" target="_parent"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB117ugnaagSKJjy0Fc763ZeVXaR/EN_300_250.png"/></a>
+    </td> 
+    <td>
+        <a href="https://s.click.aliexpress.com/e/euVVBa6?bz=120*600" target="_parent"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB1auODmWigSKJjSspp761bnpXaX/EN_300_250.png"/></a>
+    </td>
+    <td>
+        <a href="https://s.click.aliexpress.com/e/Be2R3vB?bz=120*600" target="_parent"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB17b3LqHsTMeJjSszi763dwXXaE/EN_300_250.png"/></a>
     </td>      
-  </tr>
-  <tr> 
+ 
+<!--End 第二行 图片超链接-->
+</tr>  
+<!--   第三行 图片超级链接-->
     <td>
-        <a href="https://goo.gl/IsUP5k"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/064/780/3716087460_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
+        <a href="https://s.click.aliexpress.com/e/yJqfaMr?bz=120*600" target="_parent"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB1Y6cFmfBNTKJjSsze763u2VXa2/EN_300_250.png"/></a>
     </td> 
     <td>
-        <a href="https://goo.gl/uedwm4"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/682/986/3716689286_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
+        <a href="https://s.click.aliexpress.com/e/I6unqNb?bz=120*600" target="_parent"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB1hHtHnjihSKJjy0Ff762GzFXaW/EN_300_250.png"/></a>
     </td>
     <td>
-        <a href="https://goo.gl/RasC5J"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/887/570/3716075788_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
+        <a href="https://s.click.aliexpress.com/e/aemaieU?bz=120*600" target="_parent"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB16Q1om6ihSKJjy0Fl761dEXXat/EN_300_250.png"/></a>
     </td>
-    </tr>
-  <tr>
-    <td>
-        <a href="https://goo.gl/kMFQ2d"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/737/716/3718617737_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/C9xJcm"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/835/386/3716683538_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/87T07T"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/931/626/3718626139_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-  </tr> 
-  </table><!--End of 模板-->
-<!--开始复制1-->
-<table width="300" border="0" cellspacing="40">
-  <tr>
-    <td>
-        <a href="https://goo.gl/RzLnGn"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/565/480/3716084565_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/xYUJRD"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/266/326/3718623662_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/Hg7ssa"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/547/026/3718620745_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>      
-  </tr>
-  <tr> 
-    <td>
-        <a href="https://goo.gl/IsUP5k"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/064/780/3716087460_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/uedwm4"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/682/986/3716689286_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/RasC5J"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/887/570/3716075788_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    </tr>
-  <tr>
-    <td>
-        <a href="https://goo.gl/kMFQ2d"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/737/716/3718617737_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/C9xJcm"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/835/386/3716683538_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/87T07T"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/931/626/3718626139_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-  </tr> 
-  </table>
-<!--End -复制1-->
-<!--开始复制2-->
-<table width="300" border="0" cellspacing="40">
-  <tr>
-    <td>
-        <a href="https://goo.gl/RzLnGn"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/565/480/3716084565_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/xYUJRD"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/266/326/3718623662_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/Hg7ssa"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/547/026/3718620745_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>      
-  </tr>
-  <tr> 
-    <td>
-        <a href="https://goo.gl/IsUP5k"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/064/780/3716087460_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/uedwm4"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/682/986/3716689286_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/RasC5J"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/887/570/3716075788_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    </tr>
-  <tr>
-    <td>
-        <a href="https://goo.gl/kMFQ2d"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/737/716/3718617737_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/C9xJcm"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/835/386/3716683538_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/87T07T"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/931/626/3718626139_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-  </tr> 
-  </table>
-<!--End -复制2-->
-<!--开始复制3-->
-<table width="300" border="0" cellspacing="40">
-  <tr>
-    <td>
-        <a href="https://goo.gl/RzLnGn"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/565/480/3716084565_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/xYUJRD"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/266/326/3718623662_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/Hg7ssa"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/547/026/3718620745_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>      
-  </tr>
-  <tr> 
-    <td>
-        <a href="https://goo.gl/IsUP5k"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/064/780/3716087460_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/uedwm4"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/682/986/3716689286_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/RasC5J"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/887/570/3716075788_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    </tr>
-  <tr>
-    <td>
-        <a href="https://goo.gl/kMFQ2d"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/737/716/3718617737_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/C9xJcm"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/835/386/3716683538_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/87T07T"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/931/626/3718626139_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-  </tr> 
-  </table>
-<!--End -复制3-->
-<!--开始复制4-->
-<table width="300" border="0" cellspacing="40">
-  <tr>
-    <td>
-        <a href="https://goo.gl/RzLnGn"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/565/480/3716084565_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/xYUJRD"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/266/326/3718623662_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/Hg7ssa"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/547/026/3718620745_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>      
-  </tr>
-  <tr> 
-    <td>
-        <a href="https://goo.gl/IsUP5k"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/064/780/3716087460_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/uedwm4"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/682/986/3716689286_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/RasC5J"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/887/570/3716075788_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    </tr>
-  <tr>
-    <td>
-        <a href="https://goo.gl/kMFQ2d"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/737/716/3718617737_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/C9xJcm"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/835/386/3716683538_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/87T07T"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/931/626/3718626139_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-  </tr> 
-  </table>
-<!--End -复制4-->
-<!--开始复制5-->
-<table width="300" border="0" cellspacing="40">
-  <tr>
-    <td>
-        <a href="https://goo.gl/RzLnGn"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/565/480/3716084565_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/xYUJRD"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/266/326/3718623662_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/Hg7ssa"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/547/026/3718620745_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>      
-  </tr>
-  <tr> 
-    <td>
-        <a href="https://goo.gl/IsUP5k"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/064/780/3716087460_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/uedwm4"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/682/986/3716689286_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/RasC5J"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/887/570/3716075788_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    </tr>
-  <tr>
-    <td>
-        <a href="https://goo.gl/kMFQ2d"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/737/716/3718617737_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td> 
-    <td>
-        <a href="https://goo.gl/C9xJcm"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/835/386/3716683538_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-    <td>
-        <a href="https://goo.gl/87T07T"   target="_blank"><img src="https://cbu01.alicdn.com/img/ibank/2016/931/626/3718626139_1493379176.jpg" width="300" height="250" alt="Guaranteed lowest price from every top brand" /></a>
-    </td>
-  </tr> 
-  </table>
-<!--End -复制5-->
+   <!-- End 第三行 图片超级链接-->
+</table>
+<!--模块二 产品推荐 结束-->
 </center>
+
+
 <!--以下是Pinterest认证-->
 <meta name="p:domain_verify" content="aa011280d2302d8b34c1059a63160912"/>
 <!--以上是Pinterest认证-->
 <!--以下是统计代码，style="display:none"用来表示隐藏统计代码"-->
 <div style="display:none">
-<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1257395183'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1257395183' type='text/javascript'%3E%3C/script%3E"));</script>
+<script src="https://s19.cnzz.com/z_stat.php?id=1266736691&web_id=1266736691" language="JavaScript"></script>
 </div>
 <!--以上是统计代码-->
-<!--手机端弹窗-->
-<script type="text/javascript">
-    amzn_assoc_ad_type = "link_enhancement_widget";
-    amzn_assoc_tracking_id = "a016ae77-20";
-    amzn_assoc_linkid = "47ba90166333cf2cc84922bb83f109aa";
-    amzn_assoc_placement = "";
-    amzn_assoc_marketplace = "amazon";
-    amzn_assoc_region = "US";
-</script>
-<script src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1&MarketPlace=US"></script>
-<!--手机端弹窗-->
 </body>
