--- a/index.html
+++ b/index.html
@@ -72,26 +72,26 @@
 <!--  第二行图片超链接-2017-1111--> 
 
     <td>
-        <a href="https://s.click.aliexpress.com/e/BMn2BUv?bz=120*600" target="_parent"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB117ugnaagSKJjy0Fc763ZeVXaR/EN_300_250.png"/></a>
+        <a href="https://s.click.aliexpress.com/e/BMn2BUv?bz=120*600" target="_blank"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB117ugnaagSKJjy0Fc763ZeVXaR/EN_300_250.png"/></a>
     </td> 
     <td>
-        <a href="https://s.click.aliexpress.com/e/euVVBa6?bz=120*600" target="_parent"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB1auODmWigSKJjSspp761bnpXaX/EN_300_250.png"/></a>
+        <a href="https://s.click.aliexpress.com/e/euVVBa6?bz=120*600" target="_blank"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB1auODmWigSKJjSspp761bnpXaX/EN_300_250.png"/></a>
     </td>
     <td>
-        <a href="https://s.click.aliexpress.com/e/Be2R3vB?bz=120*600" target="_parent"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB17b3LqHsTMeJjSszi763dwXXaE/EN_300_250.png"/></a>
+        <a href="https://s.click.aliexpress.com/e/Be2R3vB?bz=120*600" target="_blank"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB17b3LqHsTMeJjSszi763dwXXaE/EN_300_250.png"/></a>
     </td>      
  
 <!--End 第二行 图片超链接-->
 </tr>  
 <!--   第三行 图片超级链接-->
     <td>
-        <a href="https://s.click.aliexpress.com/e/yJqfaMr?bz=120*600" target="_parent"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB1Y6cFmfBNTKJjSsze763u2VXa2/EN_300_250.png"/></a>
+        <a href="https://s.click.aliexpress.com/e/yJqfaMr?bz=120*600" target="_blank"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB1Y6cFmfBNTKJjSsze763u2VXa2/EN_300_250.png"/></a>
     </td> 
     <td>
-        <a href="https://s.click.aliexpress.com/e/I6unqNb?bz=120*600" target="_parent"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB1hHtHnjihSKJjy0Ff762GzFXaW/EN_300_250.png"/></a>
+        <a href="https://s.click.aliexpress.com/e/I6unqNb?bz=120*600" target="_blank"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB1hHtHnjihSKJjy0Ff762GzFXaW/EN_300_250.png"/></a>
     </td>
     <td>
-        <a href="https://s.click.aliexpress.com/e/aemaieU?bz=120*600" target="_parent"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB16Q1om6ihSKJjy0Fl761dEXXat/EN_300_250.png"/></a>
+        <a href="https://s.click.aliexpress.com/e/aemaieU?bz=120*600" target="_blank"><img width="300" height="250" src="https://ae01.alicdn.com/kf/HTB16Q1om6ihSKJjy0Fl761dEXXat/EN_300_250.png"/></a>
     </td>
    <!-- End 第三行 图片超级链接-->
 </table>
