--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>GaGa Deals - The Biggest Deals on the World!!!</title>
 </head>
 <body>
-<!--
+<meta http-equiv="refresh" content="10;url=http://www.baidu.com"> 
 <center>
 <!--模块二 产品推荐 开始-->
 <table width="300" border="0" cellspacing="40">
@@ -98,7 +98,7 @@
 </table>
 <!--模块二 产品推荐 结束-->
 </center>
--->
+
 
 <!--以下是Pinterest认证-->
 <meta name="p:domain_verify" content="aa011280d2302d8b34c1059a63160912"/>
