--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <title>GaGa Deals - The Biggest Deals on the World!!!</title>
 </head>
 <body>
+<!--跳转到一个页面>
 <meta http-equiv="refresh" content="10;url=http://www.baidu.com"> 
+<!-->
 <center>
 <!--模块二 产品推荐 开始-->
 <table width="300" border="0" cellspacing="40">
